<resources>
    <string name="app_name">Подключение Яндекс.Такси</string>
    <string name="connection">ПОДКЛЮЧЕНИЕ</string>
    <string name="moscow">МОСКВА</string>
    <string name="enter_number">Введите номер, который будет использоваться в работе</string>
    <string name="start_number">+7</string>
    <string name="upload_photo">Загрузите фото следующих документов:</string>

    <string name="photo_license">Фотографируем лицензию</string>
    <string name="photo_driver_root">Фотографируем водительское удостоверение</string>
    <string name="photo_driver_root_reverce">Фотографируем водительское удостоверение (оборот)</string>
    <string name="photo_STS">Фотографируем СТС (с информацией об авто)</string>
    <string name="photo_driver_translate">Фотографируем перевод водительского удостоверения</string>
    <string name="registartion">РЕГИСТРАЦИЯ</string>
    <string name="camera">Камера</string>
    <string name="gallery">Выбрать фото</string>
    <string name="choice">Выберите или сделайте фото</string>

    <string name="text_information">Спасибо!\n\n\n
Если всё сделано правильно, в ближайшее время Вам поступит СМС с подтверждением подключения.\n\n
В ожидании СМС ознакомьтесь с наиболее часто задаваемыми вопросами:\n\n</string>

    <string name="q_1">В. Как быстро происходит подключение?\n</string>
    <string name="q_2">В. Какой у вас % комиссии?\n</string>
    <string name="q_3">В. Как быстро и каким образом я могу получить безнал?\n</string>
    <string name="q_4">В. А у вас много заказов? Без работы я стоять не буду?\n</string>
    <string name="q_5">В. У меня автомобиль ShuangHuan 1998 года выпуска. Сможете меня подключить?\n</string>

    <string name="a_1">О. Обычно на подключение, с момента отправки документов, уходит не более часа.\n\n</string>
    <string name="a_2">О. Процент комиссии динамический, от 3х до 5. Брендированые Я.Такси автомобили сразу подключаются с комиссией 3%.\n\n</string>
    <string name="a_3">О. Безналичные деньги со счёта переводятся день в день, с понедельника по субботу. Способы выплаты следующие: Я.Деньги, QIWI, карта Сбербанка. На карты других банков деньги отправляются, однако в этом случае удерживается комиссия банка, а сроки зачисления могут достигать 5 рабочих дней.\n\n</string>
    <string name="a_4">О. Наш таксопарк (равно как и все другие) никак не влияет на количество заказов, а также на их распределение между водителями. Более подробно с правилами и условиями работы можно ознакомиться на официальном сайте <a href="https://driver.yandex/">Я.Такси</a>\n\n</string>
    <string name="a_5">О. Мы подключаем автомобили, имеющие лицензию на осуществление таксомоторной деятельности в г. Москве или Московской области. Со списком автомобилей можно ознакомиться самостоятельно, перейдя по <a href="https://driver.yandex/list/">сылке</a>.\n\n</string>


</resources>
