<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TableRow
        android:layout_margin="3dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/camera"
            android:id="@+id/camera_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gallery"
            android:id="@+id/gallery_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
</LinearLayout>